--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <canvas id="canvas"/>
+        <canvas id="canvas" width="500px" height="300px"/>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="breakout.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("breakout.core");</script>
