--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <canvas id="canvas" width="500px" height="300px"/>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="breakout.js" type="text/javascript"></script>
+       <!-- <script> breakout.core.init() </script> -->
         <script type="text/javascript">goog.require("breakout.core");</script>
     </body>
 </html>
